--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="top-menu">
         <!-- логотип -->
         <div class="logo">
-            <img src="source/img/LOGO.jpeg" alt="logo">
+            <img src="LOGO.jpeg" alt="logo">
         </div>
         <!-- элементы меню -->
         <ul class="menu-main">
